minor changes to studen_agent.py

--- a/authors.yaml
+++ b/authors.yaml
@@ -6,6 +6,6 @@
   mcgill_id: "261166349"
   email: "richard.wang@mail.mcgill.ca"
 
-  name: "Richard Wang"
-  mcgill_id: "261166349"
-  email: "richard.wang@mail.mcgill.ca"
+  name: "Queenie Chen"
+  mcgill_id: "261145346"
+  email: "qing.chen2@mail.mcgill.ca"
